--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 *.dll
 *.so
 *.dylib
+*.png
+*.jpeg
+*.jpg
 
 # Test binary, built with `go test -c`
 *.test
@@ -12,3 +15,4 @@
 *.out
 
 */secret/
+
